re-align with JCDE